# rc-nebius-challenge-2026-public

./: .gitignore  Dockerfile  LICENSE  MILESTONES.md  README.md  RESULTS_LOCAL_RTX5080.md  Taskfile.yml  pyproject.toml  requirements.txt
assets/: README.md
configs/: materials_grid.json  materials_neighbors.json  mats_parker.json  mats_roll_train.json
docker/: Dockerfile.dev  Dockerfile.lab  README.md  run.sh  run_lab.sh
endpoint/: Dockerfile  app.py  deploy_endpoint.sh  requirements.txt
graspsort/: behavior.py  controller.py  gripper.py  gripper_robotiq.py  kinematics.py  kinematics_batched.py  logging_schema.py  observe.py  parallel_env.py  parts.py  randomize.py  robot.py  scorer.py  sim_env.py  soft_foundation.py  soft_rig.py  videoio.py
job/: auto_relaunch_es.sh  build_endpoint_report.py  build_lab_report.py  build_report.py  chain_env_tune.sh  isaac_lab_nebius_test.sh  local_train_loop.sh  run_dummy_job.sh  stage1_materials.sh  stage2_depth.sh  stage3_verdicts.sh  watch_endpoint.sh  watch_patient_job.sh
jobs/: eval_sort.py  gen_data.py  gen_data_parallel.py  train_scorer.py
lab/: press_sweep.py
tools/: anim_tilt.py  arena_eval.py  gen_dataset_v2.sh  pick_lab.py  plot_dwell.py  plot_eye.py  plot_gatem.py  plot_pen_sections.py  plot_poc2.py  plot_sections.py  plot_tracediff.py  poc_fem_pen.py  poc_fem_press.py  poc_fem_rest.py  probe_cam.py  probe_gripper.py  probe_press_grasp.py  probe_press_lift.py  probe_profile.py  probe_soft_tilt.py  render_arena.py  render_fem.py  render_foundation.py  render_pick.py  render_review.py  render_sort.py  smoke_bt.py  (+2 more)
(+16 files in other folders)
